<resources>
    <string name="app_name">JC瀏覽器</string>
    <string name="version">版本</string>
    <string name="keyword_hint">關鍵字</string>
    <string name="download">我的下載</string>
    <string name="setting">設定</string>
    <string name="playlist">播放清單</string>

    <string name="reload">重新載入</string>
    <string name="open_in_browser">在預設瀏覽器中開啟</string>
    <string name="select_open_tool">選擇瀏覽器</string>
    <string name="share_to">分享</string>

    <string name="go_back">返回</string>
    <string name="action_toggle_previewer">切換瀏覽器顯示</string>

    <string name="menu_home">首頁</string>
    <string name="tags">標籤</string>
    <string name="search">搜尋</string>

    <string name="loading">載入中</string>
    <string name="no_data">沒有資料</string>

    <string name="action_add_bookmark">加入書籤</string>
    <string name="action_remove_bookmark">移除書籤</string>
    <string name="bookmark_added">已加入書籤</string>
    <string name="bookmark_removed">已移除書籤</string>

    <string name="playlist_added">已編輯播放清單</string>
    <string name="playlist_removed">已從播放清單移除</string>

    <string name="open">瀏覽</string>
    <string name="name">名稱</string>
    <string name="edit_name">編輯名稱</string>
    <string name="copy_url">複製網址</string>
    <string name="delete">移除</string>

    <string name="choose_video">選擇片源</string>
    <string name="choose_model">選擇主演</string>


    <string name="previous">上一頁</string>
    <string name="next">下一頁</string>

    <string name="play">播放</string>
    <string name="pause">暫停</string>
    <string name="resume">繼續</string>

    <string name="download_not_found">尚未下載</string>
    <string name="already_download">已完成下載</string>
    <string name="failed_to_load_video">無法載入</string>
    <string name="failed_to_play_video">無法播放</string>
    <string name="failed_to_play_undone_video">檔案發生錯誤或正在下載</string>
    <string name="failed_to_delete_video">無法移除</string>
    <string name="removed">已移除</string>
    <string name="wait_retry">等待重試</string>
    <string name="retry_later">晚點再試試</string>
    <string name="pending">等待中</string>
    <string name="failed">發生錯誤</string>
    <string name="removing">移除中</string>
    <string name="cancel">取消</string>
    <string name="list_video">影片列表</string>
    <string name="report">意見回報</string>
    <string name="clear_cache">清除緩存</string>
    <string name="enter_report_advice">輸入建議或回報錯誤</string>
    <string name="type_here">請輸入…</string>
    <string name="submit">送出</string>
    <string name="enter_email">請輸入聯絡信箱</string>
    <string name="enter_email_optional">請輸入聯絡信箱 (選填)</string>
    <string name="update_required">需要更新</string>
    <string name="force_update_message">有一個新版本，請更新以繼續使用應用程序</string>
    <string name="update">更新</string>
    <string name="report_success">我們已收到您的訊息，感謝您的建議和回饋</string>
    <string name="something_went_wrong">發生錯誤，請稍後再試</string>
    <string name="copied">已複製到剪貼簿</string>
    <string name="should_browse">是否前往</string>
    <string name="watch_history">觀看紀錄</string>
    <string name="my_playlist">我的播放清單</string>
    <string name="movies_in_playlist">部影片</string>
    <string name="clear_playlist">清空播放清單</string>
    <string name="delete_playlist">刪除播放清單</string>
    <string name="error">錯誤</string>
    <string name="error_init_db">資料庫初始化失敗</string>
    <string name="add_playlist">新增播放清單</string>
    <string name="add">新增</string>
    <string name="empty_name_error">名稱不能為空白</string>
    <string name="change_playlist">編輯播放清單</string>
    <string name="ok">完成</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="continue_playing">是否從上次觀看的地方繼續?</string>
    <string name="at_page">第 %1$d 頁</string>


    <item name="breath_tag" type="id" />

</resources>